# opengsync-app

./: .gitignore  .woodpecker.yaml  Dockerfile  Makefile  README.md  api.ipynb  compose.dev.yaml  compose.test.yaml  compose.yaml  create_indexes.ipynb  db_structure.txt  debug.env  debug.sh  entrypoint.sh  init_db.ipynb  limbless.service  migration.md  pgadmin_setup.md  prod-update.sh  prod.sh  pyproject.toml  pyrightconfig.json  release.sh  requirements.dev.txt  requirements.txt  run.batch  run.sh  setup.py  template.env  test.ipynb  test.sh  update.sh  wsgi.py
services/backend/: pyproject.toml
services/backend/server/: __init__.py  main.py
services/backend/server/cli/: enums.py
services/backend/server/components/: __init__.py
services/backend/server/core/: __init__.py  audit.py  auth.py  barcode_utils.py  cache.py  config.py  context.py  dependencies.py  exceptions.py  handlers.py  lifespan.py  mailer.py  middleware.py  msf_cache.py  msf_helpers.py  redis.py  registry.py  responses.py  runtime.py  secrets.py  templates.py  utils.py
services/backend/server/forms/: HTMXForm.py  LibraryPropertyForm.py  MultiStepForm.py  SubHTMXForm.py  __init__.py
services/backend/server/resources/: providers.py  vms.py
services/backend/server/routes/: __init__.py
services/backend/server/scripts/: prestart.py
services/backend/server/utils/: __init__.py  barcodes.py  cwl.py  io.py  parsing.py  status.py
services/celery/scheduler/: __init__.py  pyproject.toml
services/celery/scheduler/tasks/: __init__.py  rf_scanner.py  status_updater.py
services/limbless-app/limbless-db/: pyproject.toml  requirements.txt  setup.py
services/limbless-app/limbless-db/limbless_db/: __init__.py
services/opengsync-app/: Dockerfile  Dockerfile.dev  debug.py  entrypoint.sh  pyproject.toml  wsgi.py
services/opengsync-app/opengsync-api/: pyproject.toml
services/opengsync-app/opengsync-api/opengsync_api/: OpeNGSyncAPI.py  __init__.py
services/opengsync-app/opengsync-db/: management.md  pyproject.toml
services/opengsync-app/opengsync-db/opengsync_db/: __init__.py  cli_init.py
services/opengsync-app/opengsync-server/: opengsync.yaml  pyproject.toml
services/opengsync-app/opengsync-server/opengsync_server/: __init__.py  app.py
services/opengsync-app/scripts/: cli_init.py  entrypoint.sh  wsgi.py
services/opengsync-app/static/images/: license.txt
services/opengsync-app/static/js/: callbacks.js  clipboard-btn.js  confirm_close.js  contextmenu.js  cookie.js  fastapi-table.js  flash-message.js  flask-table.js  jss-extended.js  libs.js  load_plotly.js  multiple_select.js  nav.js  reverse_complement.js  search-select.js  searchbar.js  tooltips.js  univer.js
services/opengsync-app/static/style/: banner.css  calendar.css  colors.css  components.css  dashboard.css  design.css  email.css  form.css  modal.css  multiple-select.css  multiselect.css  navbar.css  plate.css  progress_bar.css  responsive.css  scrollbar.css  search-select.css  style.css  table.css  theme.css  tooltip.css  workflow.css
services/opengsync-app/templates/: admin_page.html  auth_page.html  base.html  browse.html  complete_registration_page.html  dashboard-insider.html  dashboard-user.html  design_page.html  device_page.html  experiment_page.html  experiments_page.html  feature_kit_page.html  feature_kits_page.html  files_page.html  group_page.html  groups_page.html  help.html  index_kit_page.html  index_kits_page.html  kit_page.html  kits_page.html  lab_prep_page.html  lab_preps_page.html  libraries_page.html  library_page.html  pool_page.html  pools_page.html  project_page.html  projects_page.html  protocol_page.html  protocols_page.html  register_page.html  reset_password_page.html  sample_page.html  samples_page.html  seq_request_page.html  seq_requests_page.html  seq_run_page.html  seq_runs_page.html  share_tokens_page.html  (+4 more)
services/opengsync-app/templates/actions/: add-seq_request-assignee.html  add-seq_request-share-email.html  add-user-to-group.html  edit-experiment-cycles.html  library-prep.html  process-request.html  reseq.html  sample-pooling.html  select-pool-libraries.html  sequencer-loading-checklist.html  store-samples.html  upload-prep_table.html
services/opengsync-app/templates/components/: after-seq_request-submit-info.html  alerts.html  assay_type-todo-list.html  assignee_list.jinja2  barcode_clashes_table.jinja2  barcode_results.html  button.jinja2  categorical_mapping.jinja2  comment-thread.html  confirm.jinja2  contextmenu.jinja2  experiment-pooling-ratios.html  experiment-stats.html  file-list.html  flash.html  form_group.jinja2  itable.html  lane-pooling-ratios.html  legends.jinja2  library-reads.html  library-spatial-annotation.html  library_form_popup.html  library_index_cell.jinja2  library_type_badge_list.jinja2  metadata_group.jinja2  multi_select.jinja2  pagination.jinja2  plate.html  plates.html  project-software.html  right_click_menu.html  search.jinja2  search_select.jinja2  search_select_results.html  spinner.jinja2  spreadsheet.jinja2  static-spreadsheet.html  status_bar.jinja2  table_col.jinja2  tooltip.jinja2  (+3 more)
services/opengsync-app/templates/email/: base.html  password-reset.html  register-user.html  share-data.html  share-directory.html  share-project-data.html  user-activation.html  welcome-back.html
services/opengsync-app/templates/errors/: 403.html  404.html  500.html  error.html  page.html  traceback.html
services/opengsync-app/templates/examples/: feature-2.html  feature-3.html  feature-4.html  flex.html  library-indexing.html  multi.html  multiome.html  mux_pools.html  oligo_mux_annotation.html  pool-indexing-1.html  rna.html  sample_annotation.html  sas_pooled_kit.html  sas_pooled_manual.html  sas_raw.html  tenx.html  visium.html
services/rf-scanner/: Dockerfile  entrypoint.sh  pyproject.toml  run.sh  runner.py
services/rf-scanner/rf_scanner/: main.py
services/rf-scanner/src/: runner.py
services/scheduler/: Dockerfile  pyproject.toml  run.py
services/scheduler/scheduler/: __init__.py  file_cleaner.py  rf_scanner.py  status_updater.py
(+2289 files in other folders)
