[project]
name = "opengsync-app"
version = "0.1.0"
dependencies = [
    "opengsync-db",
    "opengsync-server",
    "opengsync-worker",

    "numpy >= 2.2",
    "pandas >= 2.3, < 3.0",
    "loguru >= 0.7",
    "psycopg[binary] >= 3.2",
    "SQLAlchemy >= 2.0",
    "pytz >= 2023.3.post1",
    "tzlocal >= 5.2",
    "uuid7 >= 0.1.0",
    "redis",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
opengsync-db = { workspace = true }
opengsync-server = { workspace = true }
opengsync-worker = { workspace = true }