[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["packages"]

[project]
name = "opengsync-app"
dynamic = ["version"]
dependencies = [
    "opengsync-db",
    "opengsync-server",
    "opengsync-worker",
    "opengsync-api",

    "numpy >= 2.2",
    "pandas >= 3.0",
    "loguru >= 0.7",
    "psycopg[binary] >= 3.2",
    "SQLAlchemy >= 2.0",
    "pytz >= 2023.3.post1",
    "tzlocal >= 5.2",
    "uuid6",
    "redis",
]


[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
opengsync-db = { workspace = true }
opengsync-api = { workspace = true }
opengsync-server = { workspace = true }
opengsync-worker = { workspace = true }