[build-system]
requires = ["setuptools>=70.1", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler"
version = "1.0"
description = ""
authors = [
    { name = "lutrarutra", email = "lutrarutra@pm.me" }
]
requires-python = ">=3.11"

dependencies = [
    "numpy < 2",   # Required for interop
    "interop",
    "apscheduler >= 3.11",
    "pandas",
    "numba",
    "numexpr",
    "itsdangerous >= 2.1.2",
    "loguru >= 0.7.2",
    "psycopg[binary]",
    "SQLAlchemy >= 2.0.28",
    "pytz >= 2023.3.post1",
    "tzlocal >= 5.2",
    "Werkzeug >= 3.0.3",
]

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
]
extend-ignore = ["E501", "W292", "W293"]

[project.urls]
Repository = "https://github.com/lutrarutra/opengsync-app"

[project.scripts]
py-scheduler = "scheduler.main:cli"
