[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limbless_db"
version = "1.0"
description = "Database for NGS sample/library/project tracking app."
authors = [
    { name = "lutrarutra", email = "artur.gynter@proton.me" }
]
requires-python = ">=3.11"

dependencies = [
    "numba >= 0.59.1",
    "numexpr >= 2.9.0",
    "numpy >= 1.26.4",
    "pandas >= 2.2.1",
    "itsdangerous >= 2.1.2",
    "loguru >= 0.7.2",
    "psycopg2 >= 2.9.9",
    "SQLAlchemy >= 2.0.28",
    "pytz >= 2023.3.post1",
    "tzlocal >= 5.2",
    "Werkzeug >= 3.0.3",
]

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
]
extend-ignore = ["E501", "W292", "W293"]

[project.urls]
Repository = "https://github.com/lutrarutra/limbless-app"


