[build-system]
requires = ["setuptools>=70.1", "wheel>=0.43"]
build-backend = "setuptools.build_meta"

[project]
name = "opengsync_db"
version = "1.0"
description = "Database for NGS sample/library/project tracking app."
authors = [
    { name = "lutrarutra", email = "lutrarutra@pm.me" }
]
requires-python = ">=3.11"

# If you change these, also change the ones in services/scheduler/pyproject.toml
dependencies = [
    "numpy>= 2.2",
    "pandas>= 2.3",
    "numba >= 0.61",
    "numexpr >= 2.11",
    "itsdangerous >= 2.1.2",
    "loguru >= 0.7",
    "psycopg[binary] >= 3.2",
    "SQLAlchemy >= 2.0",
    "pytz >= 2023.3.post1",
    "tzlocal >= 5.2",
    "Werkzeug >= 3.0",
    "pint"
]

[tool.flake8]
max-line-length = 88
exclude = [
    ".git",
    "__pycache__",
]
extend-ignore = ["E501", "W292", "W293"]

[project.urls]
Repository = "https://github.com/lutrarutra/opengsync-app"

[project.scripts]
opengsync-init-db = "opengsync_db.cli_init:main"

